# Utils

./: .gitignore  CONTRIBUTING.md  README.md  commitlint.config.js  renovate.json
boilerplates/python-fastapi/: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements-metrics.txt  requirements.txt
boilerplates/python-fastapi/.github/workflows/: cd.yml  ci.yml
boilerplates/python-fastapi/alembic/: env.py
boilerplates/python-fastapi/alembic/versions/: 0001_initial_schema.py
boilerplates/python-fastapi/api-collection/: bruno.json
boilerplates/python-fastapi/api-collection/environments/: local.bru
boilerplates/python-fastapi/api-collection/users/: delete-account.bru  update-profile.bru
boilerplates/python-fastapi/load-tests/: README.md  docker-compose.loadtest.yml  locustfile.py
boilerplates/python-fastapi/metrics/: report_2026-05-08_155632.xlsx  report_2026-05-08_160629.html  report_2026-05-08_160629.xlsx  report_2026-05-11_143427.html  report_2026-05-11_143427.xlsx
boilerplates/python-fastapi/scripts/: metrics.py  requirements-metrics.txt  seed.py
boilerplates/python-fastapi/src/app/core/: application.py  cors.py  database.py  openapi.py  security.py  settings.py  telemetry.py
boilerplates/python-fastapi/src/app/domain/: user.py
boilerplates/python-fastapi/src/app/repositories/: refresh_token_repository.py  user_repository.py
boilerplates/python-fastapi/src/app/schemas/: auth.py  users.py
boilerplates/python-fastapi/src/app/services/: authenticate_user_service.py  delete_user_service.py  register_user_service.py  update_user_service.py
boilerplates/python-fastapi/tests/: conftest.py
boilerplates/python-fastapi/tests/integration/auth/: test_login.py  test_logout.py  test_refresh_token.py  test_register.py
boilerplates/python-fastapi/tests/integration/users/: test_delete_user.py  test_get_profile.py  test_update_profile.py
boilerplates/python-fastapi/tests/unit/domain/: test_email.py  (+1 more)
(+325 files in other folders)
